--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     </div>
 
     <!-- /*Third layer*/ -->
-    <div class="layer layer--three">layer 3</div>
+    <div class="layer layer--three">
+        <p>Summer Vibes</p>
+    </div>
 
     <!-- /*Fourth layer*/ -->
     <div class="layer layer--four">
