More responsive page for mobile

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <header>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
     <link rel="stylesheet" href="index.css">
 </header>
@@ -28,7 +28,7 @@
             <p>Lorum ipsum something something fake latin dont read further thanks</p>
             <button>Sign Up</button>
         </div>
-        <img>
+        <img src="/images/lofi-summer3.jpg" alt="picture of a lofi scene">
     </div>
 
     <!-- /*Second layer*/ -->
