Finished applying content to remaining layers
Added the logo, functional links, spotify playlists, and removed the placeholder text.

--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 
     <!--Header layer*/ -->
     <div class="header">
-        <div class="logo">logo</div>
+        <div class="logo">
+            <img src="/images/summer-lofi-girl.jpg">
+        </div>
         <div class="right-links">
             <ul>
-                <li>link-one</li>
-                <li>link-two</li>
-                <li>link-three</li>
+                <li>
+                    <a href="https://www.youtube.com/watch?v=1bvbsx-hpFc&t=20s&ab_channel=LofiGirl">Restful Holidays</a>
+                </li>
+                <li><a href="https://www.youtube.com/watch?v=kyqpSycLASY&ab_channel=Settle">Chill Summer Lofi</a></li>
+                <li><a href="https://www.youtube.com/watch?v=1fueZCTYkpA&ab_channel=LofiGirl">Morning Coffee</a></li>
             </ul>
         </div>
     </div>
@@ -24,8 +28,8 @@
     <!-- /*First layer*/ -->
     <div class="layer layer--one">
         <div class="left-side">
-            <h2>This website is awesome</h2>
-            <p>Lorum ipsum something something fake latin dont read further thanks</p>
+            <h2>Summer Lofi Appreciation</h2>
+            <p>This is dedicated to lofi music during the summer time.</p>
             <button>Sign Up</button>
         </div>
         <img src="/images/lofi-summer3.jpg" alt="picture of a lofi scene">
@@ -33,7 +37,27 @@
 
     <!-- /*Second layer*/ -->
     <div class="layer layer--two">
-        <h2>Some Random Information</h2>
+        <h2>A Few Spotify Playlists</h2>
+
+        <div class="playerlist">
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/playlist/1wKrJhctQoXgmhkTBdmLbh?utm_source=generator" width="250"
+                height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/playlist/4gRoFV3lCVoNMsDdPmKy0Z?utm_source=generator" width="250"
+                height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+
+            <iframe style="border-radius:12px"
+                src="https://open.spotify.com/embed/playlist/1C4USEWkwdypEP2R4FBS7K?utm_source=generator" width="250"
+                height="352" frameBorder="0" allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"></iframe>
+        </div>
     </div>
 
     <!-- /*Third layer*/ -->
@@ -44,14 +68,14 @@
     <!-- /*Fourth layer*/ -->
     <div class="layer layer--four">
         <div class="layer-four-container">
-            <h2>Call to act</h2>
-            <p>Lorum ipsum something something fake latin dont read further thanks</p>
+            <h2>Sign Up For More Summer Lofi Vibes!</h2>
+            <p>Sign Up By Clicking The Button!</p>
             <button>Sign Up</button>
         </div>
     </div>
 
     <!-- /*Footer layer*/ -->
-    <div class="footer">Footer</div>
+    <div class="footer">Copyright © Summer Lofi</div>
 </body>
 
 </html>
