Fixed playlist widgets in layer 2 going out of bounds
Once screen resolution was reduced, the spotify playlist widgets in layer 2
would leave div area. Removed the height from layer 2 to avoid this issue
and widgets now stay within.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="layer layer--two">
         <h2>A Few Spotify Playlists</h2>
 
-        <div class="playerlist">
+        <div class="playlist">
             <iframe style="border-radius:12px"
                 src="https://open.spotify.com/embed/playlist/1wKrJhctQoXgmhkTBdmLbh?utm_source=generator" width="250"
                 height="352" frameBorder="0" allowfullscreen=""
