Image issue on github pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Header layer*/ -->
     <div class="header">
         <div class="logo">
-            <img src="/images/summer-lofi-girl.jpg">
+            <img src="./images/summer-lofi-girl.jpg">
         </div>
         <div class="right-links">
             <ul>
@@ -32,7 +32,7 @@
             <p>This is dedicated to lofi music during the summer time.</p>
             <button>Sign Up</button>
         </div>
-        <img src="/images/lofi-summer3.jpg" alt="picture of a lofi scene">
+        <img src="./images/lofi-summer3.jpg" alt="picture of a lofi scene">
     </div>
 
     <!-- /*Second layer*/ -->
